--- a/css/queris.css
+++ b/css/queris.css
@@ -82,14 +82,14 @@
     margin: 0 10rem;
   }
 
-  .advantages {
+  /* .advantages {
     grid-template-columns: 1fr;
-  }
-  .advantages ul {
+  } */
+  /* .advantages ul {
     display: grid;
     width: 100%;
     grid-template-columns: 1fr 1fr;
-  }
+  } */
   .advantages .number {
     margin-bottom: 2rem;
   }
@@ -187,7 +187,6 @@
   html { 
     font-size: 45%; 
   }
-
   .nav-wrapper {
     height: 12rem;
   }
@@ -262,7 +261,7 @@
       margin-top: 4rem;
       }
       .car-type-description {
-        padding: 0.4rem 2rem;
+      padding: 0.4rem 2rem;
       font-size: 2.4rem;
       font-family: 'Poppins', sans-serif;
       }
@@ -328,7 +327,7 @@
 @media (max-width: 450px) {
   .header {
     height:50vh;
-    background: url("../img/hero-img/hero-img-3.webp");
+    background: url("../img/hero-img/hero-image-3-mobile.webp");
     background-size: 100% 100%;
     background-repeat: no-repeat;
   }
@@ -389,6 +388,12 @@
 .btn--form input { 
   padding: 3rem;
 }
+
+.inquairy {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+} 
 
 }
 @media (max-width: 400px) {
